[tool.poetry]
name = "Tablet"
version = "0.1.0"
description = ""
authors = ["dylan-slack <dslack@uci.edu>"]
readme = "README.md"
packages = [
    { include = "Tablet" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
datasets = "^2.10.1"
joblib = "^1.2.0"
streamlit = "^1.20.0"
imodels = "^1.3.17"
kmodes = "^0.12.2"
xgboost = "^1.7.4"
transformers = "^4.27.2"
openai = "^0.27.2"
torch = "^2.0.0"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
